--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_bloc: ^9.1.1
   hydrated_bloc: ^10.1.1
-  flutter_svg: ^2.0.17
   smooth_page_indicator: ^1.2.1
   modal_progress_hud_nsn: ^0.5.1
 
@@ -108,10 +107,10 @@ flutter:
         - asset: assets/fonts/Amiri-Regular.ttf
           weight: 700      
 flutter_native_splash:
-  color: "#E9F6F3"          
+  color: "#121212"          
   image: assets/images/soliman.png
   android_12:
     image: assets/images/soliman.png
-    color: "#E9F6F3"
+    color: "#121212"
   android: true
   ios: true
