--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   speech_to_text: ^7.3.0
   string_similarity: ^2.1.1
+  permission_handler: ^12.0.1
 
 dev_dependencies:
   flutter_test:
