--- a/assets/jsons/app_strings.json
+++ b/assets/jsons/app_strings.json
@@ -159,6 +159,7 @@
     "assets/images/quran.png",
     "assets/images/recitersImages/reciter.png",
     "assets/images/search.png",
+    "assets/images/radio.png",
     "assets/images/praying.png",
     "assets/images/ramadan.png",
     "assets/images/mosque.png",
